Fixed: Alignment and Border in all browsers the same. Fixes the alignment problems in Chrome (#7)

--- a/structoedit.css
+++ b/structoedit.css
@@ -103,15 +103,18 @@ limitations under the License.
 .scroller>*{
   line-height: 1.2em;
 	font-family: monospace;
+  font-size:inherit;
 	white-space: pre;
   position:relative;
   padding: .1em;
+  border-width:1px;
 }
 .structcodemarks {
 	position: absolute;
 	z-index: -1;
-	margin: 2px 0px 0px 2px;
+	margin: 1px;
 	color: transparent;
+  box-sizing: border-box;
 }
 .structcodecmd{
   color:red;
